--- a/ui_tracer_extension/popup.html
+++ b/ui_tracer_extension/popup.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8"> 
-  <title>UI Trace Recorder</title>
+  <meta charset="UTF-8">
   <style>
-    body { font-family: sans-serif; width: 200px; padding: 10px; }
-    button { width: 100%; margin-bottom: 5px; padding: 8px; }
-    textarea { width: 100%; height: 100px; margin-top: 10px; resize: vertical; }
+    body {
+      width: 300px;
+      padding: 10px;
+      font-family: Arial, sans-serif;
+    }
+    button {
+      width: 100%;
+      padding: 8px;
+      margin: 5px 0;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:disabled {
+      background-color: #cccccc;
+      cursor: not-allowed;
+    }
+    #status {
+      margin-top: 10px;
+      text-align: center;
+      color: #666;
+    }
   </style>
 </head>
 <body>
-  <h2>UI Trace Recorder</h2>
-  <button id="startButton">START</button>
-  <button id="stopButton">STOP</button>
-  <button id="loadButton">LOAD</button>
-  <textarea id="traceOutput" readonly></textarea>
+  <button id="startRecording">記録開始</button>
+  <button id="stopRecording" disabled>記録停止</button>
+  <button id="downloadJSON" disabled>JSONをダウンロード</button>
+  <div id="status"></div>
   <script src="popup.js"></script>
 </body>
 </html>
